fix: select image align middle

--- a/site/templates/static/custom.less
+++ b/site/templates/static/custom.less
@@ -33,3 +33,7 @@
     transform: translateY(-5px);
   }
 }
+
+.bank-img .ant-image {
+  vertical-align: middle;
+}
